--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   frontend:
     build:
@@ -8,10 +7,23 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
+      - node_modules:/app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
     command: npm run serve
+    
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./backend:/app
+      - maven-repo:/root/.m2
+    depends_on:
+      - frontend
 
 volumes:
-  frontend_node_modules:
+  node_modules:
+  maven-repo:
