--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     },
     "dependencies": {
         "vue": "^3.3.0",
-        "core-js": "^3.30.0"
+        "core-js": "^3.30.0",
+        "axios": "^1.7.9"
     },
     "devDependencies": {
         "@vue/cli-service": "^5.0.8",
