--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,5 @@
-# Base image (Alpine → Slim으로 변경)
+# Base image
 FROM eclipse-temurin:17-jdk AS builder
-
-# 필요한 패키지 설치 (apk → apt로 변경)
-RUN apt-get update && apt-get install -y curl tar bash && rm -rf /var/lib/apt/lists/*
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -24,7 +21,7 @@ COPY src src
 # 애플리케이션 빌드
 RUN ./mvnw clean package -DskipTests -B
 
-# 실행 단계 (Alpine → Slim 변경)
+# 실행 단계
 FROM eclipse-temurin:17-jdk
 
 # JAR 파일 복사
