feat: docker-compose.yml에 PostgreSQL 지원 추가
- docker-compose.yml에 PostgreSQL 서비스 추가
- DB 이름, 사용자, 비밀번호 환경 변수 설정 추가
- PostgreSQL 포트(5432) 개방
- 데이터 영속성을 위한 볼륨(db-data) 추가
- .gitignore 파일 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,19 @@ services:
       - maven-repo:/root/.m2
     depends_on:
       - frontend
+  db:
+    image: postgres:13
+    container_name: postgres_db
+    environment:
+      - POSTGRES_DB=sampledb
+      - POSTGRES_USER=sampleuser
+      - POSTGRES_PASSWORD=samplepass
+    ports:
+      - "5432:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
 
 volumes:
   node_modules:
   maven-repo:
+  db-data:
