--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=sample-vue-spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/sampledb
+spring.datasource.username=sampleuser
+spring.datasource.password=samplepass
