refactor: 백엔드 계층 구조 개선 및 API 응답 표준화
- Controller와 Service 계층 분리 (DbCheckController)
- API 응답 형식 표준화를 위한 DTO 추가 (ApiResponse)
- Lombok 활용한 코드 간소화
- 데이터베이스 체크 UI 컴포넌트 추가 (HelloWorld.vue)

관련 파일:
backend/src/main/java/com/example/sample_vue_spring/
  - controller/DbCheckController.java
  - service/DatabaseService.java
  - dto/ApiResponse.java
frontend/src/components/HelloWorld.vue
backend/pom.xml

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,34 +1,32 @@
-# Base image
-FROM eclipse-temurin:17-jdk AS builder
-
-# 작업 디렉토리 설정
+# Build stage
+FROM eclipse-temurin:17-jdk AS build
 WORKDIR /app
 
-# Maven 래퍼와 pom.xml 복사
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
+# Copy Maven wrapper and pom.xml
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
 
-# Maven 래퍼 실행 권한 부여 (Windows에서 권한 문제 해결)
+# Copy source code
+COPY src ./src
+
+# Build application
+RUN chmod +x ./mvnw
+RUN ./mvnw clean package -DskipTests
+
+# Run stage
+FROM eclipse-temurin:17-jdk
+WORKDIR /app
+
+# Copy JAR from build stage
+COPY --from=build /app/target/*.jar app.jar
+
+# Maven wrapper and dependencies
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
 RUN chmod +x ./mvnw
 
-# 의존성 다운로드
-RUN ./mvnw dependency:go-offline -B
+# 개발 환경에서는 소스를 볼륨으로 마운트할 것이므로 COPY는 불필요
+CMD ["./mvnw", "spring-boot:run"]
 
-# 소스 코드 복사
-COPY src src
-
-# 애플리케이션 빌드
-RUN ./mvnw clean package -DskipTests -B
-
-# 실행 단계
-FROM eclipse-temurin:17-jdk
-
-# JAR 파일 복사
-COPY --from=builder /app/target/*.jar app.jar
-
-# 포트 설정
-EXPOSE 8080
-
-# 애플리케이션 실행
+# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
