--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,19 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     command: npm run serve
+    networks:
+      - frontend-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    restart: unless-stopped
     
   backend:
     build:
@@ -19,23 +32,59 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./backend:/app
       - maven-repo:/root/.m2
+    environment:
+      - JAVA_OPTS=-Xmx512m -Xms256m
     depends_on:
-      - frontend
+      frontend:
+        condition: service_started
+      db:
+        condition: service_healthy
+    networks:
+      - frontend-network
+      - backend-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.70'
+          memory: 1G
+    restart: unless-stopped
   db:
     image: postgres:13
     container_name: postgres_db
     environment:
       - POSTGRES_DB=sampledb
       - POSTGRES_USER=sampleuser
-      - POSTGRES_PASSWORD=samplepass
+      - POSTGRES_PASSWORD_FILE=/run/secrets/db_password
     ports:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "sampleuser", "-d", "sampledb"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    secrets:
+      - db_password
+    networks:
+      - backend-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 1G
+    restart: unless-stopped
 
 volumes:
   node_modules:
   maven-repo:
   db-data:
+
+secrets:
+  db_password:
+    file: ./db_password.txt
+
+networks:
+  frontend-network:
+  backend-network:
