feat: API 문서화 추가 및 PostgreSQL 보안 강화
- Swagger/OpenAPI 문서화 기능 추가
  - API 그룹화 및 상세 설명 추가
  - Swagger UI 설정
  - API 응답 형식 표준화

- PostgreSQL 보안 설정 강화
  - SCRAM-SHA-256 인증 방식 적용
  - 데이터베이스 초기화 설정 개선

관련 파일:
- backend/pom.xml (Swagger 의존성 추가)
- backend/src/main/resources/application.yml (Swagger, DB 설정)
- backend/src/main/java/com/example/sample_vue_spring/
  - config/SwaggerConfig.java (신규)
  - controller/* (Swagger 문서화 추가)
- docker-compose.yml (PostgreSQL 보안 설정)
- README.md (문서 업데이트)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,8 @@ services:
       - POSTGRES_DB=sampledb
       - POSTGRES_USER=sampleuser
       - POSTGRES_PASSWORD_FILE=/run/secrets/db_password
+      - POSTGRES_HOST_AUTH_METHOD=scram-sha-256
+      - POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256
     ports:
       - "5432:5432"
     volumes:
