feat: 프로젝트 최적화 및 성능 개선
- `docker-compose.yml` 최적화:
  - backend 서비스에 `MAVEN_OPTS` 환경 변수 추가하여 빌드 성능 개선
  - PostgreSQL 데이터베이스 `healthcheck` 추가
  - 프론트엔드 실행 방식 변경 (`npm run serve` -> `npm run build`)
  - CPU 및 메모리 사용량 제한 설정 추가

- 프론트엔드(`package.json`) 최적화:
  - `vue-cli-service` 관련 패키지 제거 (Vite만 사용)
  - `eslint` 설정 추가 및 자동 linting 스크립트 적용
  - 불필요한 패키지 제거 및 의존성 최신화

- 백엔드(`Dockerfile`) 최적화:
  - Maven 빌드 캐시 활용하여 빌드 속도 개선
  - `JAVA_OPTS` 및 `MAVEN_OPTS` 설정 추가하여 실행 최적화
  - 컨테이너 내 불필요한 파일 삭제하여 이미지 크기 축소

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,10 @@
 FROM eclipse-temurin:17-jdk-jammy AS build
 WORKDIR /app
 
+# 환경 변수 설정
+ENV JAVA_OPTS="-Xmx512m -Xms256m"
+ENV MAVEN_OPTS="-Dmaven.repo.local=/root/.m2/repository"
+
 # Copy Maven wrapper and pom.xml
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
