refactor: 프론트엔드 아키텍처 개선 및 API 연동 최적화
프론트엔드 구조 개선:
- services/api.js 생성으로 API 로직 모듈화
- axios 인스턴스 공통 설정 및 에러 처리 추가
- HelloWorld 컴포넌트 API 호출을 개별 버튼으로 분리

개발 환경 설정 개선:
- Vite 프록시 설정으로 백엔드 API 연동
- docker-compose 환경변수 의존성 제거
- CORS 이슈 해결을 위한 프록시 설정
- 개발 서버 포트 3000 고정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -23,3 +23,13 @@ springdoc:
     path: /swagger-ui.html
     operations-sorter: method
   packages-to-scan: com.example.sample_vue_spring.controller
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
