--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,13 @@ services:
       - "3000:3000"
     volumes:
       - node_modules:/app/node_modules
+    depends_on:
+      backend:
+        condition: service_healthy
     environment:
       - CHOKIDAR_USEPOLLING=true
-    command: npm run serve
+      - NODE_OPTIONS=--no-deprecation
+    command: npm run dev
     networks:
       - frontend-network
     deploy:
@@ -35,6 +39,9 @@ services:
     environment:
       - JAVA_OPTS=-Xmx512m -Xms256m
       - MAVEN_OPTS=-Dmaven.repo.local=/root/.m2/repository
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/sampledb
+      - SPRING_DATASOURCE_USERNAME=sampleuser
+      - SPRING_DATASOURCE_PASSWORD=samplepass
     depends_on:
       db:
         condition: service_healthy
@@ -47,6 +54,12 @@ services:
           cpus: '0.70'
           memory: 1G
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   db:
     image: postgres:13
     container_name: postgres_db
