--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,19 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "serve": "vite --host",
+        "dev": "vite",
         "build": "vite build",
-        "lint": "vue-cli-service lint"
+        "preview": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.3.0",
-        "axios": "^1.7.9"
+        "vue": "^3.5.13",
+        "axios": "^1.8.1",
+        "vuex": "^4.1.0",
+        "vue-router": "^4.5.0"
     },
     "devDependencies": {
-        "@vue/compiler-sfc": "^3.3.0",
-        "vite": "^4.0.0",
-        "@vitejs/plugin-vue": "^4.0.0"
+        "@vue/compiler-sfc": "^3.5.13",
+        "vite": "^5.4.14",
+        "@vitejs/plugin-vue": "^4.6.2"
     }
 }
