--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,9 +12,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
 
 springdoc:
   api-docs:
@@ -22,7 +25,10 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     operations-sorter: method
+    disable-swagger-default-url: true
   packages-to-scan: com.example.sample_vue_spring.controller
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
 
 management:
   endpoints:
