--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     volumes:
       - node_modules:/app/node_modules
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_OPTIONS=--no-deprecation
@@ -54,14 +53,9 @@ services:
           cpus: '0.70'
           memory: 1G
     restart: unless-stopped
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   db:
-    image: postgres:13
+    image: postgres:latest
     container_name: postgres_db
     environment:
       - POSTGRES_DB=sampledb
