--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
+      - ./frontend:/app
       - node_modules:/app/node_modules
     depends_on:
       - backend
@@ -26,7 +27,7 @@ services:
         max-size: "10m"
         max-file: "3"
     restart: unless-stopped
-    
+
   backend:
     build:
       context: ./backend
@@ -68,7 +69,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "sampleuser", "-d", "sampledb"]
+      test: [ "CMD", "pg_isready", "-U", "sampleuser", "-d", "sampledb" ]
       interval: 5s
       timeout: 3s
       retries: 5
