--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "frontend",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "vue": "^3.5.13",
-        "axios": "^1.8.1",
-        "vuex": "^4.1.0",
-        "vue-router": "^4.5.0"
-    },
-    "devDependencies": {
-        "@vue/compiler-sfc": "^3.5.13",
-        "vite": "^5.4.14",
-        "@vitejs/plugin-vue": "^4.6.2"
-    }
+  "name": "frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.4.21",
+    "axios": "^1.6.7",
+    "vuex": "^4.1.0",
+    "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@vue/compiler-sfc": "^3.4.21",
+    "vite": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.17"
+  }
 }
